docs/css/styles.css
@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
/* ==========================================================================
 * * Base styles: opinionated defaults
 * * ========================================================================== */
html {
  background: white;
  color: #010400;
  font-family: "Raleway", sans-serif;
  font-size: 1em;
  line-height: 1.4;
}

/* * Remove text-shadow in selection highlight:
 * * https://twitter.com/miketaylr/status/12228805301
 * *
 * * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * * https://stackoverflow.com/a/16982510/7133471
 * *
 * * Customize the background color to match your design. */
::-moz-selection, ::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/* * A better looking default horizontal rule */
hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 2px solid #050003;
  margin: 1em 0;
  padding: 0;
}

/*navigation bar on the left */

.flex-container {
    display: flex;
    flex-direction: row;
    max-width: 1600px;
    margin: auto;
    height: 100%; 
    align-items: stretch;
}

.left-panel {
    background: #1F2747;
    flex: 16.6%;
}

.right-panel {
    /* background-image: url("img/image0.gif"); */
    background-image: var(--background);
    flex: 83.4%;
    height: 100%;
    max-width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    align-items: center;
}

nav {
    display: flex;
    align-items: center;
    background-color: var(--nav-color);
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-right: 1.5px solid #000;
}

nav li {
    list-style: none;
    text-align: center;
    padding-right: 30px;
}

.nav-links a {
    display: inline-block;
    text-decoration: none;
    color: white;
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 17px;
}

nav img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
}

.logo { 
    color: white;
    letter-spacing: 5px;
    font-size: 20px;
    text-align: center;
    font-weight: bolder;
}

/* Container holding the image and the text */
  /* Centered text */

.outer-center {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
  body, html {
      height: 100%;
  }

/* * Remove the gap between audio, canvas, iframes,
 * * images, videos and the bottom of their containers:
 * * https://github.com/h5bp/html5-boilerplate/issues/440 */
audio, canvas, iframe, img, svg, video {
  vertical-align: middle;
}

/* * Remove default fieldset styles. */
fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/* * Allow only vertical resizing of textareas. */
textarea {
  resize: vertical;
}

/* ==========================================================================
 * * Author's custom styles
 * * ========================================================================== */
h1 {
  font-size: 50px;
  color: white;
  text-align: center;
  padding-top: 5%;
  /* font-family: 'Ramabhadra', sans-serif; */
}

h2 {
    padding-top: 0;
    font-size: 30px;
    color: white;
    text-align: left;
    /* font-family: 'Lusitana', serif; */
    padding-left: 80px;
    padding-right: 50px;
    padding-bottom: 25%;
}  

h3, h4 {
  color: #1f2747;
}

h5 {
    font-size: 20px;
    /* color: #01688d; */
    color: white;
    text-align: center;
    align-items: center;
  }

a {
  transition: color 0.1s ease;
}

:not(nav) > a {
  color: #01688d;
}
:not(nav) > a:hover {
  color: #01435a;
}

/* ==========================================================================
 * * Helper classes
 * * ========================================================================== */
/* * Hide visually and from screen readers */
.hidden, [hidden] {
  display: none !important;
}

/* * Hide only visually, but have it available for screen readers:
 * * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 * *
 * * 1. For long content, line feeds are not interpreted as spaces and small width
 * *    causes content to wrap 1 word per line:
 * *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe */
.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}
.sr-only.focusable:active, .sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/* * Extends the .sr-only class to allow the element
 * * to be focusable when navigated to via the keyboard:
 * * https://www.drupal.org/node/897638 */
/* * Hide visually and from screen readers, but maintain layout */
.invisible {
  visibility: hidden;
}

/* * Clearfix: contain floats
 * *
 * * For modern browsers
 * * 1. The space content is one way to avoid an Opera bug when the
 * *    `contenteditable` attribute is included anywhere else in the document.
 * *    Otherwise it causes space to appear at the top and bottom of elements
 * *    that receive the `clearfix` class.
 * * 2. The use of `table` rather than `block` is only necessary if using
 * *    `:before` to contain the top-margins of child elements. */
.clearfix::before {
  content: " ";
  display: table;
}
.clearfix::after {
  content: " ";
  display: table;
  clear: both;
}

/* ==========================================================================
 * * EXAMPLE Media Queries for Responsive Design.
 * * These examples override the primary ('mobile first') styles.
 * * Modify as content requires.
 * * ========================================================================== */
@media only screen and (min-width: 35em) {
  /* Style adjustments for viewports that meet the condition */
}
@media print, (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
  /* Style adjustments for high resolution devices */
}
/* ==========================================================================
 * * Print styles.
 * * Inlined to avoid the additional HTTP request:
 * * https://www.phpied.com/delay-loading-your-print-css/
 * * ========================================================================== */
@media print {
  * {
    background: #fff !important;
    color: #000 !important;
    /* Black prints faster */
    box-shadow: none !important;
    text-shadow: none !important;
  }
  *::before, *::after {
    background: #fff !important;
    color: #000 !important;
    /* Black prints faster */
    box-shadow: none !important;
    text-shadow: none !important;
  }

  a {
    text-decoration: underline;
  }
  a:visited {
    text-decoration: underline;
  }
  a[href]::after {
    content: " (" attr(href) ")";
  }

  abbr[title]::after {
    content: " (" attr(title) ")";
  }

  /* * Don't show links that are fragment identifiers,
  * * or use the `javascript:` pseudo protocol */
  a[href^="#"]::after, a[href^="javascript:"]::after {
    content: "";
  }

  pre {
    white-space: pre-wrap !important;
    border: 1px solid #999;
    page-break-inside: avoid;
  }

  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }

  /* * Printing Tables:
  * * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables */
  thead {
    display: table-header-group;
  }

  tr, img {
    page-break-inside: avoid;
  }

  p, h2, h3 {
    orphans: 3;
    widows: 3;
  }

  h2, h3 {
    page-break-after: avoid;
  }
}

/*# sourceMappingURL=styles.css.map */

